refactor: 收口后端基础设施与接口分包重构